# specter

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  deny.toml  justfile
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: boringssl-release.yml  ci.yml  crates-release.yml  github-release.yml  node-release.yml  python-release.yml
benches/: codex_real_streaming.rs  codex_ws_streaming.rs  streaming_vs_reqwest.rs  websocket_vs_fastwebsockets.rs
benches/native_h3_vs_rust_clients/: Cargo.toml
benches/native_h3_vs_rust_clients/src/: main.rs
bindings/node/: .gitignore  Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json
bindings/node/__tests__/: client.test.js  websocket.test.js  websocket_h2.test.js  websocket_h3.test.js
bindings/node/__tests__/helpers/: h2_websocket_server.js  ws_server.js
bindings/node/npm/darwin-arm64/: package.json
bindings/node/npm/darwin-x64/: package.json
bindings/node/npm/linux-arm64-gnu/: package.json
bindings/node/npm/linux-x64-gnu/: package.json
bindings/node/src/: lib.rs  websocket.rs  websocket_h2.rs  websocket_h3.rs  ws_types.rs
bindings/python/: Cargo.toml  README.md  README_PYPI.md  pyproject.toml  specter.pyi
bindings/python/python/specter/: __init__.py
bindings/python/src/: lib.rs  websocket.rs  websocket_h2.rs  websocket_h3.rs  ws_types.rs
bindings/python/tests/: conftest.py  test_client.py  test_websocket.py  test_websocket_h2.py  test_websocket_h3.py
bindings/python/tests/helpers/: __init__.py  h2_websocket_server.py  ws_server.py
docs/: specter-native-h3-remaining-seams.md  specter-websocket-h3-current-status-and-gap-plan.md  test-build-optimization-shared-plan.md
docs/benchmarks/: RELEASE_PERFORMANCE.md  WEBSOCKET_RELEASE.md
docs/benchmarks/2026-05-24-connect-path/: README.md  summary.json
docs/benchmarks/2026-05-24-streaming/: README.md  final2-h1-request-s100.json  final2-h1-response-s100.json  final2-h2-request-s100.json  final2-h2-response-repeat1-s100.json  final2-h2-response-repeat2-s100.json  final2-h2-response-repeat3-s100.json  final2-h2-response-s100.json  h1h2-request-pushdata-budget-s100.json  h1h2-response-pushdata-budget-s100.json  rfc8441-pushdata-budget-live.json  summary.json
docs/benchmarks/2026-05-25-streaming/: h1-request-s100-proof.json  h1-response-s100-proof.json  h2-request-s100-proof.json  h2-response-s100-proof.json
docs/benchmarks/codex-real-streaming/: 2026-05-24T205852Z.json  n10-final.json
docs/benchmarks/codex-ws-streaming/: 2026-05-24T210510Z.json  n10-final.json  n100-chrome146-release.json  n100-none-release.json  n30-baseline.json  n30-postfix.json  n50-postfix.json
docs/benchmarks/native-h3-vs-rust-clients/: 2026-05-24-full-local-n30-plus-rfc9220-comparators.json  2026-05-24-full-local-n30.json  2026-05-24-full-local-smoke.json  2026-05-24-full-local-with-s2n-smoke.json  2026-05-24-quic-transport-local.json  2026-05-24-quiche-direct-rfc9220-tunnel-local.json  2026-05-24-quinn-transport-local.json  2026-05-24-rfc9220-comparators-local-smoke.json  2026-05-24-rfc9220-n100.json  2026-05-24-rfc9220-quiche-direct-local.json  2026-05-24-rfc9220-quiche-tunnel-local-n30.json  2026-05-24-rfc9220-tokio-quiche-local.json  2026-05-24-rfc9220-tokio-quiche-tunnel-local-n30.json  2026-05-24-rfc9220-tunnel-close-agent3.json  2026-05-24-rfc9220-tunnel-close-local.json  2026-05-24-rfc9220-tunnel-echo-agent3.json  2026-05-24-rfc9220-tunnel-local.json  2026-05-24-rfc9220-tunnel-mixed-agent3.json  2026-05-24-rfc9220-tunnel-mixed-local.json  2026-05-24-rfc9220-websocket-h3-agent3.json  2026-05-24-s2n-quic-transport-local.json  2026-05-24-tokio-quiche-rfc9220-tunnel-local.json  2026-05-25-rfc9220-mixed-repeat-shared-load-n100.json  2026-05-25-rfc9220-n100-plus-close-and-mixed-comparators.json  2026-05-25-rfc9220-n100-plus-close-comparators.json  2026-05-25-rfc9220-quiche-direct-close-local-n30.json  2026-05-25-rfc9220-quiche-direct-mixed-local-n30.json  2026-05-25-rfc9220-suite-n100.json  2026-05-25-rfc9220-tokio-quiche-close-local-n30.json  2026-05-25-rfc9220-tokio-quiche-mixed-local-n30.json  README.md
docs/benchmarks/websocket-vs-fastwebsockets/: 2026-05-24-final.json  n20000-release.json
docs/fingerprints/: chrome-142-148.md  firefox-version-profiles.md
examples/: fingerprint_validation.rs  protocol_test.rs  tcp_fingerprint.rs
scripts/: build-boringssl.sh  check-release-lockfiles.sh  install-boringssl-prebuilt.sh  lib-bssl-env.sh  run-public-endpoint-compatibility.sh  validate-redacted-artifacts.py
src/: cache.rs  cookie.rs  error.rs  headers.rs  lib.rs  request.rs  response.rs
src/fingerprint/: http2.rs  http3.rs  mod.rs  profiles.rs  tls.rs
src/pool/: multiplexer.rs
src/transport/: connector.rs  dns.rs  h1.rs  h1_h2.rs  mod.rs  session.rs  tcp.rs  zero_rtt.rs
src/transport/h2/: body.rs  connection.rs  driver.rs  frame.rs  handle.rs  hpack.rs  mod.rs  (+2 more)
src/url/: mod.rs
src/websocket/: client.rs  connection.rs  error.rs  frame.rs  handshake.rs  message.rs  mod.rs
tests/: benchmark_harness.rs  benchmark_thresholds.rs  builder_knobs.rs  chrome_versions.rs  compression.rs  connect_path_perf.rs  error_handling.rs  fingerprint_builder_defaults.rs  fingerprint_integration.rs  firefox_fingerprint.rs  firefox_versions.rs  h1_pooling.rs  h1_request_streaming.rs  h1_rfc_compliance.rs  h1_streaming.rs  h2_flow_control.rs  h2_inline_streaming.rs  h2_malformed.rs  h2_multiplexing.rs  h2_push_promise.rs  h2_state_machine.rs  h3_competitor_benchmark.rs  h3_fingerprint_config.rs  h3_native_codec.rs  h3_native_handshake.rs  h3_native_path_migration.rs  h3_native_quic.rs  h3_native_recovery.rs  h3_native_tls.rs  h3_native_tls_resumption.rs  h3_no_quiche_default.rs  h3_quic_packet_parsing.rs  h3_receive_flow_scheduling.rs  h3_request_streaming.rs  h3_streaming_correctness.rs  h3_streaming_pool.rs  h3_transport_parameter_raw_order.rs  headers_ja4h.rs  request_body_streaming.rs  rfc6455_websocket.rs  (+26 more)
tests/helpers/: mock_h2_server.rs  mock_h3_server.rs  mock_server.rs  mock_ws_server.rs  mod.rs  sync.rs  tls.rs
(+20 files in other folders)
