[package]
name = "specters"
version = "3.0.0"
edition = "2021"
license = "MIT"
description = "HTTP client with full TLS, HTTP/2, and HTTP/3 fingerprint control"
repository = "https://github.com/jaredboynton/specter"
keywords = ["http", "http3", "fingerprint", "tls", "boringssl"]
categories = ["network-programming", "web-programming::http-client"]
authors = ["Jared Boynton"]
readme = "README.md"
exclude = [
    "lib/boringssl/",
    "bindings/",
    "scripts/",
    ".github/",
    ".cargo/",
    "examples/",
    "justfile",
]

[lib]
name = "specter"

[dependencies]
# TLS with BoringSSL
boring = "4"
boring-sys = "4"
tokio-boring = "4"

# HTTP/1.1 (minimal implementation)
httparse = "1"

# HTTP/2 (custom implementation for full fingerprint control)
http = "1"

# HTTP/3 + QUIC (includes BoringSSL internally)
quiche = { version = "0.24", default-features = false, features = ["boringssl-boring-crate"] }

# Async runtime
tokio = { version = "1", features = ["net", "time", "sync", "rt-multi-thread", "macros", "fs", "io-util"] }

# Compression
flate2 = "1"
brotli = "8"
zstd = "0.13"

# Platform root certificates (loads from OS cert store at runtime)
rustls-native-certs = "0.8"

# Utilities
bytes = "1"
thiserror = "2"
tracing = "0.1"
url = "2"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
getrandom = "0.3"
psl = "2"
socket2 = { version = "0.6", features = ["all"] }
base64 = "0.22.1"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
rcgen = "0.14.5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "http2"] }

[[bench]]
name = "streaming_vs_reqwest"
harness = false

# Inner-loop iteration tuning. These profile sections only affect builds rooted
# at this crate; downstream consumers ignore them, so they are safe for publish.
[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.dev.package."*"]
debug = 0

[profile.test]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.test.package."*"]
debug = 0
