[package]
name = "specter-native-h3-vs-rust-clients"
version = "0.0.0"
edition = "2021"
publish = false

[features]
default = []
reqwest-h3 = ["reqwest/http3"]
s2n-quic-transport = ["dep:s2n-quic"]

[dependencies]
anyhow = "1"
bytes = "1"
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "io-util"] }
specter = { package = "specters", path = "../.." }
url = "2"

# Current fast/widely-used H3/QUIC Rust competitors, isolated from Specter's package graph.
quiche = { version = "0.29.0", default-features = false, features = ["boringssl-boring-crate"] }
tokio-quiche = "0.19.0"
h3 = "0.0.8"
h3-quinn = "0.0.10"
reqwest = { version = "0.13.3", default-features = false, features = ["rustls", "stream", "http2"] }
quinn = "0.11.9"
s2n-quic = { version = "1.80.0", optional = true }
