[package]
name = "specter-node"
version = "4.1.6"
edition = "2021"
license = "MIT"
description = "Node.js bindings for Specter HTTP client"
repository = "https://github.com/jaredboynton/specter"

[lib]
crate-type = ["cdylib"]

[dependencies]
specter = { package = "specters", path = "../.." }
napi = { version = "2", features = ["async", "tokio_rt", "napi9"] }
napi-derive = "2"
tokio = { version = "1", features = ["rt-multi-thread"] }
bytes = "1"
serde_json = "1"
http = "1"
futures-core = "0.3"

[build-dependencies]
napi-build = "2"
