[package]
name = "specter-python"
version = "3.1.0"
edition = "2021"
license = "MIT"
description = "Python bindings for Specter HTTP client"
repository = "https://github.com/jaredboynton/specter"

[lib]
name = "specter"
crate-type = ["cdylib"]

[dependencies]
specter = { package = "specters", path = "../.." }
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py310"] }
pyo3-async-runtimes = { version = "0.23", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
bytes = "1"
http = "1"

[features]
default = []
