[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "specters"
version = "4.1.0"
description = "Python bindings for Specter, a Chrome-accurate HTTP client with TLS, HTTP/1.1, HTTP/2, HTTP/3, and WebSocket fingerprinting. Improved TTFT/TPS over reqwest for LLM providers."
readme = "README_PYPI.md"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["http", "http2", "http3", "tls", "fingerprint", "chrome", "browser", "impersonate", "websocket", "client", "async", "scraping", "llm", "streaming", "sse", "ttft"]

[project.urls]
Homepage = "https://github.com/jaredboynton/specter"
Repository = "https://github.com/jaredboynton/specter"
Documentation = "https://github.com/jaredboynton/specter#readme"
Issues = "https://github.com/jaredboynton/specter/issues"
Changelog = "https://github.com/jaredboynton/specter/releases"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "maturin"]

[tool.maturin]
python-source = "python"
module-name = "specter"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
